tests/ui/no-attribute-macro.stderr
error[E0706]: functions in traits cannot be declared `async`
 --> tests/ui/no-attribute-macro.rs:2:5
  |
2 |     async fn method(&self);
  |     -----^^^^^^^^^^^^^^^^^^
  |     |
  |     `async` because of this
  |
  = note: `async` trait functions are not currently supported
  = note: consider using the `async-trait` crate: https://crates.io/crates/async-trait
  = note: see issue #91611 <https://github.com/rust-lang/rust/issues/91611> for more information
  = help: add `#![feature(async_fn_in_trait)]` to the crate attributes to enable

error[E0706]: functions in traits cannot be declared `async`
 --> tests/ui/no-attribute-macro.rs:8:5
  |
8 |     async fn method(&self) {}
  |     -----^^^^^^^^^^^^^^^^^
  |     |
  |     `async` because of this
  |
  = note: `async` trait functions are not currently supported
  = note: consider using the `async-trait` crate: https://crates.io/crates/async-trait
  = note: see issue #91611 <https://github.com/rust-lang/rust/issues/91611> for more information
  = help: add `#![feature(async_fn_in_trait)]` to the crate attributes to enable

error[E0038]: the trait `Trait` cannot be made into an object
  --> tests/ui/no-attribute-macro.rs:12:12
   |
12 |     let _: &dyn Trait;
   |            ^^^^^^^^^^ `Trait` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> tests/ui/no-attribute-macro.rs:2:14
   |
1  | pub trait Trait {
   |           ----- this trait cannot be made into an object...
2  |     async fn method(&self);
   |              ^^^^^^ ...because method `method` is `async`
   = help: consider moving `method` to another trait
